<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.bourquelot.trailxplorer.graphView
        android:id="@+id/graphView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalTimeTxt" />

            <TextView
                android:id="@+id/result1"
                android:layout_width="244dp"
                android:layout_height="match_parent"
                android:text="@string/totalTime"
                android:textAlignment="textEnd" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/result4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalDistanceTxt"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/result2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalDistance"
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/result6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/averageVelocityTxt" />

            <TextView
                android:id="@+id/result3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/averageVelocity"
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/result7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxAltitudeTxt" />

            <TextView
                android:id="@+id/results4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxAltitude"
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/result8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minAltitudeTxt" />

            <TextView
                android:id="@+id/result5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minAltitude"
                android:textAlignment="viewEnd" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>